Fix Nitro data sync